--- a/source/.ini
+++ b/source/.ini
@@ -1,13 +1,2 @@
-;Place your env-variables here
-;Example of using .ini
-;$ini = parse_ini_file(__DIR__.'/.ini');
-;echo $ini['example'];
-
-[Example]
-example = example
-
-[Camunda]
-camunda_url = http://camunda.bpx-test.moodle-dhbw.de/
-;not yet implemented:
-camunda_user = user
-camunda_pw = pw
+[Set the Camunda Base Url]
+camunda_url = https://camunda.bpxtest.moodle-dhbw.de/
